about me section added

--- a/style.css
+++ b/style.css
@@ -2,16 +2,20 @@ body{
     margin: 0;
     font-family: 'Lato', sans-serif;
 }
-#top-section{
-    display:flex;
+section{
     padding: 20px 0px;
 }
-.adjust-container{
+.container{
+    display:flex;
+    width: 85%;
+    margin: auto;
+}
+.inner-container{
     width: 50%;
-padding-left: 8%;
 }
 .image-container img{
     width: 80%;
+    padding-left: 5%;
 }
 .blue-color{
     color: #3742fa;
@@ -22,13 +26,19 @@ h1 {
     text-transform: capitalize;
     color: #555151;
 }
+h2 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #555151;  
+}
 .text-container{
     margin-top: 90px;
 }
 p{
     font-size: 16px;
     line-height: 1.4;
-    color: gray;
+    color: #363333;
 }
 .top-section-paragraph{
     margin-right: 15%;
@@ -40,4 +50,21 @@ p{
     padding: 10px 30px;
     background-image: linear-gradient(to left, #3742fa, #1e90ff);
     border-radius: 50px;
+}
+#about-me{
+    background-image: url(images/Frame-57.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.about-me-image-container {
+    text-align: center;
+}
+.about-me-image-container img {
+    width: 45%;
+}
+.about-me-text-container {
+    padding-top: 30px;
+}
+.about-me-text-container p {
+    margin-bottom: 60px;
 }
