--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body{
     font-family: 'Lato', sans-serif;
 }
 section{
-    padding: 20px 0px;
+    padding: 50px 0px;
 }
-.container{
+.flexible-container{
     display:flex;
     width: 85%;
     margin: auto;
@@ -31,6 +31,13 @@ h2 {
     font-weight: 700;
     text-transform: capitalize;
     color: #555151;  
+}
+h3{
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #555151;
+    line-height: 1;
 }
 .text-container{
     margin-top: 90px;
@@ -67,4 +74,57 @@ p{
 }
 .about-me-text-container p {
     margin-bottom: 60px;
+}
+.recipie-container{
+    width: 85%;
+    margin: auto;
+    padding-bottom: 30px;
+}
+.recipie-text-container{
+    text-align: center;
+    margin-bottom: 60px;
+}
+.recipie-boxes-container{
+    display:flex;
+    max-width: 100%;
+}
+.single-recipie {
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: rgb(184 175 175) 0px 0px 18px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 20px;
+}
+.single-recipie img{
+    width: 100%;
+    height: 200px;
+}
+.counter-container {
+    border-radius: 30px;
+    padding: 60px 0px 40px 0px;
+    box-shadow: rgb(184 175 175) 0px 0px 18px;
+}
+.counter-item {
+    width: 100%;
+    padding-left: 10%;
+}
+.counter-item h3{
+    margin: 0;
+    padding: 0;
+    color: #000;
+}
+footer{
+    background-color: #000;
+    padding: 50px 0px 90px 0px;
+}
+.footer-contents{
+    text-align: center;
+    width: 100%;
+}
+.footer-contents h2{
+    font-size: 36px;
+}
+.footer-contents p{
+    color: #fff;
 }
