--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ p{
     padding: 20px 40px;
     background-image: linear-gradient(to left, #3742fa, #1e90ff);
     border-radius: 50px;
+    box-shadow:#3742fa 0px 0px 10px;
 }
 #about-me{
     background-image: url(images/Frame-57.jpg);
