--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p{
 .single-recipie img{
     width: 100%;
     height: 200px;
+    border-radius: 20px;
 }
 .counter-container {
     border-radius: 30px;
@@ -153,6 +154,7 @@ footer{
 }
 .team-member-profile img{
     margin-bottom: 20px;
+    border-radius: 20px;
 }
 #contact{
     padding: 120px 0px;
